@@ -1,7 +1,11 @@
 relaying data between gdb and process ....
 vgdb-error value changed from 0 to 999999
 vgdb-error value changed from 999999 to 0
-n_errs_found 1 n_errs_shown 1 (vgdb-error 0)
+n_errs_found 1 n_errs_shown 1 (vgdb-error 0) 
+n_errs_found 1 n_errs_shown 1 (vgdb-error 0) a
+n_errs_found 1 n_errs_shown 1 (vgdb-error 0) b
+n_errs_found 1 n_errs_shown 1 (vgdb-error 0) c d
+n_errs_found 1 n_errs_shown 1 (vgdb-error 0) eeeeeee    fffffff    ggggggg
 vgdb-error value changed from 0 to 0
 monitor command request to kill this process
 Remote connection closed
