@@ -3,7 +3,7 @@ general valgrind monitor commands:
   v.wait [<ms>]           : sleep <ms> (default 0) then continue
   v.info all_errors       : show all errors found so far
   v.info last_error       : show last error found
-  v.info n_errs_found     : show the nr of errors found so far
+  v.info n_errs_found [msg] : show the nr of errors found so far and the given msg
   v.info open_fds         : show open file descriptors (only if --track-fds=yes)
   v.kill                  : kill the Valgrind process
   v.set gdb_output        : set valgrind output to gdb
@@ -45,7 +45,7 @@ general valgrind monitor commands:
   v.wait [<ms>]           : sleep <ms> (default 0) then continue
   v.info all_errors       : show all errors found so far
   v.info last_error       : show last error found
-  v.info n_errs_found     : show the nr of errors found so far
+  v.info n_errs_found [msg] : show the nr of errors found so far and the given msg
   v.info open_fds         : show open file descriptors (only if --track-fds=yes)
   v.kill                  : kill the Valgrind process
   v.set gdb_output        : set valgrind output to gdb
